--- a/Attitude Representations.ipynb
+++ b/Attitude Representations.ipynb
@@ -45,12 +45,12 @@
    "source": [
     "# let's define some euler angles to get a visual on the attitude over time\n",
     "# they follow the intrinsic Tait-Bryan angles following the z-y′-x″ convention\n",
-    "phi_0 = 0      # initial \"roll\"\n",
-    "phi_f = np.pi/2  # final \"roll\"\n",
-    "theta_0 = 0       # initial \"pitch\"\n",
-    "theta_f = 0       # final \"pitch\"\n",
-    "psi_0 = 0      # initial \"yaw\"\n",
-    "psi_f = 0      # final \"yaw\"\n",
+    "phi_0 = 0      # initial \"roll\" FEEL FREE TO CHANGE THIS VALUE\n",
+    "phi_f = np.pi/2  # final \"roll\" FEEL FREE TO CHANGE THIS VALUE\n",
+    "theta_0 = 0       # initial \"pitch\" FEEL FREE TO CHANGE THIS VALUE\n",
+    "theta_f = 0       # final \"pitch\" FEEL FREE TO CHANGE THIS VALUE\n",
+    "psi_0 = 0      # initial \"yaw\" FEEL FREE TO CHANGE THIS VALUE\n",
+    "psi_f = 0      # final \"yaw\" FEEL FREE TO CHANGE THIS VALUE\n",
     "\n",
     "# these variables hold 50 values linearly spaced from the initial value to the final value\n",
     "phi = np.linspace(phi_0, phi_f, num=50)\n",
